import java.util.ArrayList;

public class Initialisation
{
    private ArrayList<String> m_listePokemon;

    private int m_index;


}
